# sms_portal_backend_rs

./: Cargo.toml  readme.md  todo.md
.cargo/: config.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs
crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/ctx/: error.rs  mod.rs
crates/libs/lib-core/src/model/: agent.rs  contact.rs  conv.rs  conv_msg.rs  customer.rs  customer_users.rs  error.rs  mod.rs  modql_utils.rs  user.rs
crates/libs/lib-core/src/model/acs/: mod.rs
crates/libs/lib-core/src/model/base/: crud_fns.rs  macro_utils.rs  mod.rs  utils.rs
crates/libs/lib-core/src/model/store/: mod.rs
crates/libs/lib-core/src/model/store/dbx/: error.rs  mod.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc/src/: error.rs  lib.rs  params.rs  resources.rs  rpc_params.rs  rpc_result.rs  user.rs
crates/libs/lib-rpc/src/router/: from_resources.rs  into_params.rs  mod.rs  rpc_handler.rs  rpc_handler_wrapper.rs
crates/libs/lib-rpc/src/rpcs/: agent_rpc.rs  contact.rs  conv_rpc.rs  customer.rs  mod.rs  prelude.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b64.rs  env.rs  lib.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: config.rs  error.rs  main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_req_stamp.rs  mw_res_map.rs  routes_login.rs  routes_rpc.rs  routes_static.rs
crates/services/web-server/src/web/middleware/: error.rs  mod.rs
crates/services/web-server/src/web/routes/: mod.rs  rpc.rs
scripts/: quick_dev  start-db  web-server
sql/dev_initial/: 00-recreate-db.sql  01-01-users.sql  01-02-customers.sql  01-03-contacts.sql  01-04-lists.sql  01-05-messages.sql  01-06-contact_list.sql  01-07-customer_user.sql  01-99-relationships.sql  01-create-schema.sql  02-dev-seed.sql
web-folder/: index.html
