[package]
name = "lib-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core" }

# -- Json
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_with = "3.5.1"

# -- Data
modql = { version = "0.3.7", features = ["with-sea-query"] }

# -- Async
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"

# -- Others
derive_more = { version = "0.99.17", features = ["from"] }
paste = "1.0.14"


[lints]
workspace = true
